--- a/.github/workflows/infra-deploy.yaml
+++ b/.github/workflows/infra-deploy.yaml
@@ -37,15 +37,15 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
-        working-directory: cpms-aws/terraform
+        working-directory: terraform
         run: terraform init
 
       - name: Terraform Validate
-        working-directory: cpms-aws/terraform
+        working-directory: terraform
         run: terraform validate
 
       - name: Terraform Plan
-        working-directory: cpms-aws/terraform
+        working-directory: terraform
         run: terraform plan -out=tfplan
 
       # - name: Terraform Apply
