Fix upload path

--- a/.github/workflows/infra-deploy.yaml
+++ b/.github/workflows/infra-deploy.yaml
@@ -61,4 +61,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tf-outputs
-          path: cpms-aws/terraform/tf_outputs.json
+          path: terraform/tf_outputs.json
