--- a/.github/workflows/infra-deploy.yaml
+++ b/.github/workflows/infra-deploy.yaml
@@ -20,20 +20,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Configure AWS credentials (OIDC recommended)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::786193448664:role/github.cpms.admin
           aws-region: us-east-1
-
-      # If not using OIDC, uncomment below and set secrets in repo
-      # - name: Configure AWS credentials (using secrets)
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -59,8 +50,6 @@ jobs:
         working-directory: terraform
         run: terraform output -json > tf_outputs.json
 
-      - name: Upload Terraform Outputs
-        uses: actions/upload-artifact@v4
-        with:
-          name: tf-outputs
-          path: terraform/tf_outputs.json
+      - name: Upload Terraform Outputs to S3
+        run: |
+          aws s3 cp terraform/tf_outputs.json s3://s3-cpms-state-dev-useast1/cmps/tf_outputs.json
