--- a/k8s/cpms-secret.yaml
+++ b/k8s/cpms-secret.yaml
@@ -4,21 +4,11 @@ metadata:
   name: cpms-db-secret
 type: Opaque
 stringData:
-  DB_HOST: cpms-db
+  DB_HOST: db-cpms-infra-dev-useast1.ccri24gqwgef.us-east-1.rds.amazonaws.com
   DB_PORT: "3306"
   DB_NAME: HospitalManagement
   DB_USER: devuser
-  DB_PASSWORD: devpass
   DB_PASS: devpass
-  AZURE_STORAGE_ACCOUNT_NAME: stdocumentscpms
-  AZURE_STORAGE_ACCOUNT_KEY: Yxr+yM+3tX3HRWgM3R48Xfu3qbGv8GUajM5gbARpboA/k6M9SKrCO7Akiy+T777FaeUpXTe24+g5+AStRjIzVw==
-  AZURE_STORAGE_CONTAINER_NAME: documents
-  MYSQL_ROOT_PASSWORD: rootpass
-  MYSQL_DATABASE: HospitalManagement
-  MYSQL_USER: devuser
-  MYSQL_PASSWORD: devpass
-  TOKEN_EXPIRY: 1h
-  JWT_SECRET: 4898b1d752b01754c0c0cafd345f8e0cddfb148d0660e65dfe328e84053d2154154d886eb85dd8d90c93d35ddaef2710b5806b94f5dd9bfc1bea73489db0c7dd
 
 ---
 apiVersion: v1
@@ -28,3 +18,17 @@ metadata:
 type: Opaque
 stringData:
   PORT: "3000"
+  AZURE_STORAGE_ACCOUNT_NAME: stdocumentscpms
+  AZURE_STORAGE_ACCOUNT_KEY: Yxr+yM+3tX3HRWgM3R48Xfu3qbGv8GUajM5gbARpboA/k6M9SKrCO7Akiy+T777FaeUpXTe24+g5+AStRjIzVw==
+  AZURE_STORAGE_CONTAINER_NAME: documents
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cpms-auth-secret
+type: Opaque
+stringData:
+  JWT_SECRET: 4898b1d752b01754c0c0cafd345f8e0cddfb148d0660e65dfe328e84053d2154154d886eb85dd8d90c93d35ddaef2710b5806b94f5dd9bfc1bea73489db0c7dd
+
+  
