--- a/k8s/cpms-services.yaml
+++ b/k8s/cpms-services.yaml
@@ -147,6 +147,7 @@ kind: Deployment
 metadata:
   name: cpms-patients
 spec:
+  serviceAccountName: s3-reader
   replicas: 1
   selector:
     matchLabels:
@@ -158,7 +159,7 @@ spec:
     spec:
       containers:
         - name: cpms-patients
-          image: akapharande/cpms-patients:1.0
+          image: akapharande/cpms-patients:1.1
           ports:
             - containerPort: 3000
           envFrom:
