--- a/k8s/cpms-services.yaml
+++ b/k8s/cpms-services.yaml
@@ -222,10 +222,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cpms-ui
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
-    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
 spec:
   selector:
     app: cpms-ui
@@ -233,4 +229,29 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5173
-  type: LoadBalancer
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cpms-ui
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+spec:
+  tls:
+    - hosts:
+        - cpms.aakankshapharande.com
+      secretName: cpms-ui-tls
+  rules:
+    - host: cpms.aakankshapharande.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: cpms-ui
+                port:
+                  number: 80
