--- a/k8s/cpms-services.yaml
+++ b/k8s/cpms-services.yaml
@@ -236,10 +236,12 @@ kind: Ingress
 metadata:
   name: cpms-ui
   annotations:
-    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    external-dns.alpha.kubernetes.io/hostname: cpms.aakankshapharande.com
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true" 
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - cpms.aakankshapharande.com
